daemon set example.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds305
spec:
  selector:
    matchLabels:
      app: ds305
  template:
    metadata:
      labels:
        app: ds305
      spec:
      containers:
      - image: alpine
        name: main
        args:
        - /bin/sh
        - -c
        - sleep 86400
