ingress-nginx example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ctrl
  spec:
    ingressClassName: nginx
    rules:
      - host: demo.lab
        http:
          paths:
          - path: /
        pathType: Prefix
        backend:
        service:
          name: service1
          port:
            number: 80
